saude-bi/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: saude-bi
  labels:
    name: saude-bi
    app: saude-bi
    environment: production
