saude-bi/superset-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: superset
  namespace: saude-bi
  labels:
    app: superset
    component: bi
spec:
  type: ClusterIP
  selector:
    app: superset
  ports:
    - name: http
      protocol: TCP
      port: 8088
      targetPort: 8088
